fixed menu alignment

--- a/project2/src/components/singlePage/singlePage.css
+++ b/project2/src/components/singlePage/singlePage.css
@@ -9,7 +9,7 @@
     width: 100vw;
 }
 
-.sider {
+/* .sider {
     position: absolute;
     z-index: 1000;
-}
+} */
